--- a/unstar/src/app/app.component.html
+++ b/unstar/src/app/app.component.html
@@ -1,9 +1,6 @@
-
+<app-header></app-header>
 <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>Picture</h2>
-        <div>
-          <!-- <app-list-images *ngFor="let picture of picturesImages"></app-list-images> -->
-        </div>
+        <app-list-images></app-list-images>
 <router-outlet></router-outlet>
