--- a/unstar/src/app/list-images/list-images.component.html
+++ b/unstar/src/app/list-images/list-images.component.html
@@ -1,23 +1,30 @@
-<div class="container">
-    <h1 class="display-4 mt-5 mb-0">Form</h1>
-      <hr class="mt-0 mb-0 bg-dark">
-      <div class="row">
-        <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
-          <form [formGroup]="submitForm" (ngSubmit)="onSubmitForm()">
-            <div class="form-group">
-              <label for="year">Year</label>
-              <input type="text" id="year" class="form-control" placeholder="Year" formControlName="year">
-            </div>
-            <div class="form-group">
-              <label for="month">Month</label>
-              <input type="text" id="month" class="form-control" placeholder="Month" formControlName="month">
-            </div>
-            <div class="form-group">
-                <label for="day">Day</label>
-                <input type="text" id="day" class="form-control" placeholder="Day" formControlName="day">
-            </div>
-            <button class="btn btn-primary" type="submit">Envoyé</button>
-          </form>
-        </div>
-      </div>
-  </div>
+<div class="center">
+  <h1></h1>
+  <form [formGroup]="resForm" (ngSubmit)="onSubmitDate()">
+    <mat-form-field class="input">
+      <mat-label>Year</mat-label>
+      <input type="year" matInput formControlName="year" placeholder="year">
+      </mat-form-field>
+        <mat-form-field class="input">
+        <mat-label>Month</mat-label>
+        <input type="month" matInput formControlName="month" placeholder="month">
+        </mat-form-field>
+      <mat-form-field class="input">
+      <mat-label>Day</mat-label>
+      <input type="day" matInput formControlName="day" placeholder="day">
+    </mat-form-field>
+    <div>
+      <button mat-raised-button color="primary" type="submit">Envoyer</button>
+    </div>
+  </form>
+</div>
+<mat-grid-list cols="3">
+  <mat-grid-tile  *ngFor="let a of img">
+    <mat-card class="example-card" >
+
+         <h1 class="title">Photos n°{{a.id}}</h1>
+
+      <img mat-card-image [src]="a.img_src" alt="Photo" width="400" height="400">
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
