--- a/unstar/src/app/list-images/list-images.component.css
+++ b/unstar/src/app/list-images/list-images.component.css
@@ -3,7 +3,7 @@
   min-width: 400px;
   min-height: 400px;
   max-height: 400px;
-  background-color: rgb(152, 191, 196);
+  background-color: #673ab7;
 }
 .center {
   text-align: center;
