--- a/unstar/src/app/list-images/list-images.component.html
+++ b/unstar/src/app/list-images/list-images.component.html
@@ -1,3 +1,6 @@
+<mat-card class="h1">
+  <h1>Search Mars pictures</h1>
+</mat-card>
 <div class="center">
   <h1></h1>
   <form [formGroup]="resForm" (ngSubmit)="onSubmitDate()">
