--- a/unstar/src/app/list-images-apod/list-images-apod.component.css
+++ b/unstar/src/app/list-images-apod/list-images-apod.component.css
@@ -1,22 +1,28 @@
 .example-card {
-    max-width: 700px;
-    justify-content: center;
-    margin-left: 25%;
-    background-color: #673ab7;
-  }
-  .center {
-    text-align: center;
-    margin-top: 5%;
-    margin-bottom: 5%;
-  }
-  
-  .title {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-  }
-  
-  .input {
-    padding-right: 1%;
-  }
-  
+  max-width: 700px;
+  justify-content: center;
+  margin-left: 25%;
+  margin-bottom: 2%;
+}
+.center {
+  text-align: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.h1 {
+  width: 25%;
+  margin-top: 2%;
+  margin-left: 36%;
+  text-align: center;
+}
+
+.title {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+
+.input {
+  padding-right: 1%;
+}
