--- a/unstar/src/app/list-images-apod/list-images-apod.component.html
+++ b/unstar/src/app/list-images-apod/list-images-apod.component.html
@@ -1,3 +1,6 @@
+<mat-card class="h1">
+  <h1>Search Astronomy picture</h1>
+</mat-card>
 <div class="center">
     <h1></h1>
     <form [formGroup]="resForm" (ngSubmit)="onSubmitDate()">
@@ -13,7 +16,7 @@
         <mat-label>Day</mat-label>
         <input type="day" matInput formControlName="day" placeholder="day">
       </mat-form-field>
-      <div>    
+      <div>
         <button mat-raised-button color="primary" type="submit">Envoyer</button>
       </div>
     </form>
