--- a/unstar/src/app/list-images/list-images.component.css
+++ b/unstar/src/app/list-images/list-images.component.css
@@ -10,7 +10,12 @@
   margin-top: 5%;
   margin-bottom: 5%;
 }
-
+.h1 {
+  width: 25%;
+  margin-top: 2%;
+  margin-left: 36%;
+  text-align: center;
+}
 .title {
   display: flex;
   text-align: center;
