--- a/unstar/src/app/app.component.css
+++ b/unstar/src/app/app.component.css
@@ -1,3 +1,12 @@
-body{
-    background-image: url('/assets/img/nasabackground.jpg');
+.copy-footer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+app-header {
+  display: flex;
 }
